# simile

./: README.md  environment-base.yml  environment.yml  license.txt  pyproject.toml  simile-example.ipynb  simile.py
example_data/: fig1.json  fig5a.json  fig5b.json  fig5c.json
