[tool.poetry]
name = "simile"
version = "0.1.0"
description = "Compare MS2 spectra."
authors = ["Daniel Treen <d@tree.casa>"]
license = "Modified BSD"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
scipy = "^1.7.1"
numpy = "^1.20.3"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
